# Ascend_dvpp_resize

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dvpp_resize.cpp  dvpp_resize.h  main.cpp
cmake/: cmake_utils.cmake
common/: alg_define.h  data_type.h
common/utils/: file_process.hpp
